--- a/Capstone/nbproject/project.properties
+++ b/Capstone/nbproject/project.properties
@@ -35,14 +35,23 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Capstone
 endorsed.classpath=
 excludes=
+file.reference.LibraryLWJGLOpenAL.zip=C:\\Users\\knech_pikjrvc\\Downloads\\LibraryLWJGLOpenAL.zip
 file.reference.lwjgl-javadoc.jar=E:\\lwjgl-release-3.3.1-custom\\lwjgl-javadoc.jar
+file.reference.lwjgl-javadoc.jar-1=libs\\lwjgl-javadoc.jar
 file.reference.lwjgl-natives-windows.jar=E:\\lwjgl-release-3.3.1-custom\\lwjgl-natives-windows.jar
+file.reference.lwjgl-natives-windows.jar-1=libs\\lwjgl-natives-windows.jar
 file.reference.lwjgl-openal-javadoc.jar=E:\\lwjgl-release-3.3.1-custom\\lwjgl-openal-javadoc.jar
+file.reference.lwjgl-openal-javadoc.jar-1=libs\\lwjgl-openal-javadoc.jar
 file.reference.lwjgl-openal-natives-windows.jar=E:\\lwjgl-release-3.3.1-custom\\lwjgl-openal-natives-windows.jar
+file.reference.lwjgl-openal-natives-windows.jar-1=libs\\lwjgl-openal-natives-windows.jar
 file.reference.lwjgl-openal-sources.jar=E:\\lwjgl-release-3.3.1-custom\\lwjgl-openal-sources.jar
+file.reference.lwjgl-openal-sources.jar-1=libs\\lwjgl-openal-sources.jar
 file.reference.lwjgl-openal.jar=E:\\lwjgl-release-3.3.1-custom\\lwjgl-openal.jar
+file.reference.lwjgl-openal.jar-1=libs\\lwjgl-openal.jar
 file.reference.lwjgl-sources.jar=E:\\lwjgl-release-3.3.1-custom\\lwjgl-sources.jar
+file.reference.lwjgl-sources.jar-1=libs\\lwjgl-sources.jar
 file.reference.lwjgl.jar=E:\\lwjgl-release-3.3.1-custom\\lwjgl.jar
+file.reference.lwjgl.jar-1=libs\\lwjgl.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -53,7 +62,16 @@ javac.classpath=\
     ${file.reference.lwjgl-openal-sources.jar}:\
     ${file.reference.lwjgl-openal.jar}:\
     ${file.reference.lwjgl-sources.jar}:\
-    ${file.reference.lwjgl.jar}
+    ${file.reference.lwjgl.jar}:\
+    ${file.reference.lwjgl.jar-1}:\
+    ${file.reference.lwjgl-javadoc.jar-1}:\
+    ${file.reference.lwjgl-natives-windows.jar-1}:\
+    ${file.reference.lwjgl-openal.jar-1}:\
+    ${file.reference.lwjgl-openal-javadoc.jar-1}:\
+    ${file.reference.lwjgl-openal-natives-windows.jar-1}:\
+    ${file.reference.lwjgl-openal-sources.jar-1}:\
+    ${file.reference.lwjgl-sources.jar-1}:\
+    ${file.reference.LibraryLWJGLOpenAL.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
